Create websocket classes

--- a/project.json
+++ b/project.json
@@ -3,9 +3,10 @@
     "Microsoft.NETCore.App": {
       "version": "1.0.1",
       "type": "platform"
-    }, 
+    },
     "Microsoft.AspNetCore.AngularServices": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
+    "Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
@@ -58,7 +59,6 @@
       "typings",
       "Views",
       "tsconfig.json",
-      "tsd.json",
       "web.config",
       "webpack.*.js",
       "wwwroot"
