:sparkles: Update time

--- a/project.json
+++ b/project.json
@@ -8,6 +8,7 @@
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.WebSockets.Server": "0.1.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
+    "Newtonsoft.Json": "9.0.1",
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
       "type": "build"
