--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
     "postinstall": "webpack --config webpack.config.vendor.js"
   },
   "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "2.0.2",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
-    "@angular/platform-server": "2.0.2",
-    "@angular/router": "3.0.2",
-    "@types/node": "^6.0.39",
-    "angular2-platform-node": "~2.0.11",
-    "angular2-universal": "~2.0.11",
-    "angular2-universal-polyfills": "~2.0.11",
+    "@angular/common": "2.1.0",
+    "@angular/compiler": "2.1.0",
+    "@angular/core": "2.1.0",
+    "@angular/forms": "2.1.0",
+    "@angular/http": "2.1.0",
+    "@angular/platform-browser": "2.1.0",
+    "@angular/platform-browser-dynamic": "2.1.0",
+    "@angular/platform-server": "2.1.0",
+    "@angular/router": "3.1.0",
+    "@types/node": "^6.0.46",
+    "angular2-platform-node": "~2.1.0-rc.1",
+    "angular2-universal": "~2.1.0-rc.1",
+    "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
-    "aspnet-webpack": "^1.0.20",
+    "aspnet-webpack": "^1.0.24",
     "bootstrap": "^3.3.7",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
@@ -32,13 +32,13 @@
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
     "rxjs": "5.0.0-beta.12",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.2",
-    "typescript": "^2.0.0",
+    "style-loader": "^0.13.1",
+    "ts-loader": "1.0.0",
+    "typescript": "^2.0.7",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
+    "webpack": "^1.13.3",
     "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "^2.10.0",
-    "zone.js": "^0.6.21"
+    "webpack-hot-middleware": "^2.13.1",
+    "zone.js": "^0.6.26"
   } 
 }
