--- a/package.json
+++ b/package.json
@@ -16,29 +16,40 @@
     "@angular/router": "3.1.0",
     "@types/node": "^6.0.46",
     "angular2-platform-node": "~2.1.0-rc.1",
+    "angular2-template-loader": "0.5.0",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
-    "aspnet-webpack": "^1.0.24",
+    "aspnet-webpack": "^1.0.21",
+    "awesome-typescript-loader": "2.2.4",
     "bootstrap": "^3.3.7",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
+    "js.clone": "0.0.3",
+    "json-loader": "^0.5.4",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
+    "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "style-loader": "^0.13.1",
-    "ts-loader": "1.0.0",
-    "typescript": "^2.0.7",
+    "source-map-loader": "0.1.5",
+    "style-loader": "^0.13.0",
+    "ts-loader": "^0.9.4",
+    "typescript": "^2.0.3",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.3",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^2.1.0-beta.2",
     "webpack-externals-plugin": "^1.0.0",
-    "webpack-hot-middleware": "^2.13.1",
-    "zone.js": "^0.6.26"
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1",
+    "webpack-node-externals": "^1.4.3",
+    "zone.js": "^0.6.21"
   } 
 }
