--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "aspnetcore-angular2-universal-starter",
-  "version": "0.5.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MarkPieszak/aspnetcore-angular2-starter.git"
-  },
+  "version": "0.6.0",
   "author": {
     "name": "Mark Pieszak",
     "email": "mpieszak84@gmail.com",
     "url": "http://www.github.com/MarkPieszak"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MarkPieszak/aspnetcore-angular2-starter.git"
   },
   "dependencies": {
     "@angular/common": "2.1.0",
@@ -20,15 +20,29 @@
     "@angular/platform-browser-dynamic": "2.1.0",
     "@angular/platform-server": "2.1.0",
     "@angular/router": "3.1.0",
-    "@types/node": "^6.0.46",
     "angular2-platform-node": "~2.1.0-rc.1",
-    "angular2-template-loader": "0.5.0",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
-    "aspnet-webpack": "^1.0.21",
+    "aspnet-webpack": "^1.0.24",
+    "bootstrap": "4.0.0-alpha.5",
+    "ng2-bootstrap": "^1.1.16",
+    "preboot": "^4.5.2",
+    "rxjs": "5.0.0-rc.2",
+    "zone.js": "^0.6.26"
+  },
+  "devDependencies": {
+    "@types/hammerjs": "2.0.33",
+    "@types/jasmine": "2.5.35",
+    "@types/node": "^6.0.46",
+    "@types/protractor": "1.5.20",
+    "@types/source-map": "0.1.28",
+    "@types/uglify-js": "2.6.28",
+    "@types/webpack": "1.12.35",
+    "@types/sinon": "1.16.31",
+    "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "2.2.4",
-    "bootstrap": "^3.3.7",
+    "codelyzer": "1.0.0-beta.3",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
@@ -37,17 +51,30 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.1",
     "js.clone": "0.0.3",
     "json-loader": "^0.5.4",
-    "ng2-bootstrap": "^1.1.16",
-    "preboot": "^4.5.2",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-remap-coverage": "0.1.2",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-source-map-support": "1.2.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "2.1.13",
+    "protractor": "4.0.9",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
     "source-map-loader": "0.1.5",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.9.4",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^1.0.0",
+    "ts-node": "^1.6.1",
+    "tslint": "3.15.1",
+    "tslint-loader": "2.1.5",
+    "typedoc": "0.5.1",
     "typescript": "^2.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
@@ -56,8 +83,7 @@
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
-    "webpack-node-externals": "^1.4.3",
-    "zone.js": "^0.6.21"
+    "webpack-node-externals": "^1.4.3"
   },
   "keywords": [
     "aspnetcore",
@@ -85,6 +111,7 @@
     "pretest": "npm run lint",
     "preversion": "npm test",
     "protractor": "protractor",
+    "pree2e": "npm run webdriver:update -- --standalone",
     "rimraf": "rimraf",
     "test": "karma start",
     "tslint": "tslint",
