--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,9 @@ AutoTest.Net/
 # Installshield output folder
 [Ee]xpress/
 
+# Typedocs generated content
+doc/
+
 # DocProject is a documentation generator add-in
 DocProject/buildhelp/
 DocProject/Help/*.HxT
