add NgRx, HMR state management, Redux dev tools
Closes #2 #3 #13

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "webpack"
     ],
     "paths": {
+      "app" : ["./Client/app" ],
       "app-shared": [ "./Client/shared" ],
       "app-containers": [ "./Client/containers" ],
       "app-components": [ "./Client/components" ]
