--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "@angular/platform-browser-dynamic": "2.1.2",
     "@angular/platform-server": "2.1.2",
     "@angular/router": "3.1.2",
+    "@angularclass/hmr": "^1.2.1",
+    "@ngrx/core": "1.2.0",
+    "@ngrx/effects": "2.0.0",
+    "@ngrx/store": "2.2.1",
+    "@ngrx/store-devtools": "^3.2.2",
     "angular2-platform-node": "~2.1.0-rc.1",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
     "aspnet-webpack": "^1.0.24",
     "bootstrap": "4.0.0-alpha.5",
+    "immutable": "3.8.1",
     "ng2-bootstrap": "^1.1.16",
     "preboot": "^4.5.2",
     "rxjs": "5.0.0-rc.2",
+    "typed-immutable-record": "0.0.6",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
@@ -79,8 +86,9 @@
     "typescript": "^2.0.8",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
+    "webpack-dashboard": "0.2.0",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.1.0-beta.2",
+    "webpack-dev-server": "^2.1.0-beta.9",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.13.2",
     "webpack-merge": "^0.15.0",
