--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
     "typedoc": "0.5.1",
-    "typescript": "^2.0.8",
+    "typescript": "2.0.8",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "0.2.0",
