upgrade to latest Angular 2.2.0

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "url": "git+https://github.com/MarkPieszak/aspnetcore-angular2-universal.git"
   },
   "dependencies": {
-    "@angular/common": "2.1.2",
-    "@angular/compiler": "2.1.2",
-    "@angular/core": "2.1.2",
-    "@angular/forms": "2.1.2",
-    "@angular/http": "2.1.2",
-    "@angular/platform-browser": "2.1.2",
-    "@angular/platform-browser-dynamic": "2.1.2",
-    "@angular/platform-server": "2.1.2",
-    "@angular/router": "3.1.2",
-    "@angularclass/hmr": "^1.2.1",
+    "@angular/common": "2.2.0",
+    "@angular/compiler": "2.2.0",
+    "@angular/core": "2.2.0",
+    "@angular/forms": "2.2.0",
+    "@angular/http": "2.2.0",
+    "@angular/platform-browser": "2.2.0",
+    "@angular/platform-browser-dynamic": "2.2.0",
+    "@angular/platform-server": "2.2.0",
+    "@angular/router": "3.2.0",
+    "@angularclass/hmr": "^1.2.2",
     "@ngrx/core": "1.2.0",
     "@ngrx/effects": "2.0.0",
     "@ngrx/store": "2.2.1",
@@ -39,15 +39,16 @@
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.34",
     "@types/hammerjs": "2.0.33",
     "@types/jasmine": "2.5.35",
     "@types/node": "^6.0.46",
     "@types/protractor": "1.5.20",
     "@types/selenium-webdriver": "2.44.29",
+    "@types/sinon": "1.16.31",
     "@types/source-map": "0.1.28",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "1.12.35",
-    "@types/sinon": "1.16.31",
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "1.0.0-beta.3",
@@ -66,8 +67,8 @@
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.0.2",
     "karma-mocha-reporter": "2.2.0",
-    "karma-remap-coverage": "0.1.2",
     "karma-phantomjs-launcher": "1.0.2",
+    "karma-remap-coverage": "0.1.2",
     "karma-source-map-support": "1.2.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
@@ -83,7 +84,7 @@
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
     "typedoc": "0.5.1",
-    "typescript": "2.0.8",
+    "typescript": "2.0.10",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "0.2.0",
