--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "codelyzer": "1.0.0-beta.3",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
+    "es6-promise": "3.2.1",
+    "es6-promise-loader": "1.0.2",
     "es6-shim": "^0.35.1",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
