--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/common": "2.2.0",
-    "@angular/compiler": "2.2.0",
-    "@angular/core": "2.2.0",
-    "@angular/forms": "2.2.0",
-    "@angular/http": "2.2.0",
-    "@angular/platform-browser": "2.2.0",
-    "@angular/platform-browser-dynamic": "2.2.0",
-    "@angular/platform-server": "2.2.0",
-    "@angular/router": "3.2.0",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@angular/router": "3.2.1",
     "@angularclass/hmr": "^1.2.2",
     "@ngrx/core": "1.2.0",
     "@ngrx/effects": "2.0.0",
@@ -59,7 +59,7 @@
     "@types/webpack": "1.12.35",
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "2.2.4",
-    "codelyzer": "1.0.0-beta.3",
+    "codelyzer": "1.0.0-beta.4",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.2.1",
@@ -76,7 +76,7 @@
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "2.2.0",
+    "karma-mocha-reporter": "2.2.1",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
     "karma-source-map-support": "1.2.0",
@@ -96,7 +96,7 @@
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "2.1.0-beta.25",
     "webpack-dashboard": "0.2.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.1.0-beta.9",
