revert(ng2bootstrap): peg down to v1.1.16
#33 - have to keep it at 1.1.16 at the moment, 1.1.20 requires ng2.4.x
(which is currently unsupported by Universal at the moment) this ends
up breaking SSR, v16 works perfect.

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "aspnet-webpack": "^1.0.24",
     "bootstrap": "4.0.0-alpha.5",
     "immutable": "3.8.1",
-    "ng2-bootstrap": "^1.1.16",
+    "ng2-bootstrap": "1.1.16",
     "preboot": "^4.5.2",
     "rxjs": "5.0.0-rc.2",
     "typed-immutable-record": "0.0.6",
