--- a/package.json
+++ b/package.json
@@ -79,11 +79,11 @@
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "2.2.4",
     "codelyzer": "1.0.0-beta.4",
+    "core-js": "^2.4.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.2.1",
     "es6-promise-loader": "1.0.2",
-    "es6-shim": "^0.35.1",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
