Change List-     - FontAwsome Added     - Template and CSS require system updated to angular2 from Commonjs for better usablity in Visual Studio (2015) error tracking     - "extract-text-webpack-plugin" version updated     - webpack.vendor file's extra unusable parts commented

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
     "aspnet-webpack": "^1.0.24",
-    "bootstrap": "4.0.0-alpha.5",
+    "bootstrap": "^4.0.0-alpha.5",
+    "font-awesome": "^4.7.0",
     "immutable": "3.8.1",
     "ng2-bootstrap": "1.1.16",
     "preboot": "^4.5.2",
@@ -85,7 +86,7 @@
     "es6-promise": "3.2.1",
     "es6-promise-loader": "1.0.2",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "isomorphic-fetch": "^2.2.1",
