- Add package for SignalR and remove package for websocket - Configure SignalR in Startup.cs - Remove unused packages

--- a/project.json
+++ b/project.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "Gray.Microsoft.AspNetCore.SignalR.Server": "0.2.0-alpha1",
+    "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Microsoft.AspNetCore.Razor.Tools": {
@@ -8,7 +10,6 @@
     },
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
-    "Microsoft.AspNetCore.SignalR": "0.0.1-alpha",
     "Microsoft.AspNetCore.SpaServices": "1.1.0-*",
     "Microsoft.AspNetCore.StaticFiles": "1.1.0",
     "Microsoft.Extensions.Caching.Memory": "1.1.0",
@@ -23,6 +24,7 @@
       "version": "1.1.0",
       "type": "platform"
     },
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.1.0",
     "Newtonsoft.Json": "9.0.1"
   },
 
