--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
     "aspnet-prerendering": "^1.0.7",
-    "aspnet-webpack": "^1.0.24",
+    "aspnet-webpack": "^1.0.26",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -116,10 +116,10 @@
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "2.2.0",
     "webpack-dashboard": "0.2.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^2.1.0-beta.9",
+    "webpack-dev-server": "2.2.0",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^0.15.0",
