--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "bootstrap": "^4.0.0-alpha.5",
     "font-awesome": "^4.7.0",
     "immutable": "3.8.1",
+    "jquery": "^3.1.1",
     "ng2-bootstrap": "1.1.16",
     "preboot": "^4.5.2",
     "rxjs": "5.0.0-rc.2",
+    "signalr": "^2.2.1",
     "typed-immutable-record": "0.0.6",
     "zone.js": "^0.6.26"
   },
@@ -70,6 +72,7 @@
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.40",
+    "@types/jquery": "^2.0.39",
     "@types/node": "^6.0.46",
     "@types/protractor": "1.5.20",
     "@types/selenium-webdriver": "2.44.29",
