SignalR server side ipmlemented (#52)
Closes #39 

* Remove Websocket so that it can be replaced with SignalR

* Adding signalR package and remove websocket

* - Add package for SignalR and remove package for websocket
- Configure SignalR in Startup.cs
- Remove unused packages

* SignalR hub added

* - Readme added for adding a route
- Added 404 page
- Update readme file
- Add un-necessery files to ignore list

* SignalR UI added

* Fabicon Updated to make it showing Angular2 Fabicon

* SignalR library added

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "postinstall": "webpack --config webpack.config.vendor.js",
     "posttest": "npm run coverage",
     "postversion": "git push && git push --tags",
+    "pree2e": "npm run webdriver:update -- --standalone",
     "pretest": "npm run lint",
     "preversion": "npm test",
     "protractor": "protractor",
-    "pree2e": "npm run webdriver:update -- --standalone",
     "rimraf": "rimraf",
+    "start:dashboard": "npm run webpack-dashboard -- webpack-dev-server --inline --hot --progress --port 8080",
     "test": "karma start",
     "tslint": "tslint",
     "typedoc": "typedoc",
@@ -34,7 +35,6 @@
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver-manager": "webdriver-manager",
     "webpack": "webpack",
-    "start:dashboard": "npm run webpack-dashboard -- webpack-dev-server --inline --hot --progress --port 8080",
     "webpack-dashboard": "webpack-dashboard"
   },
   "dependencies": {
@@ -61,9 +61,11 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "immutable": "3.8.1",
+    "jquery": "^3.1.1",
     "ng2-bootstrap": "1.1.16",
     "preboot": "^4.5.2",
     "rxjs": "5.0.0-rc.2",
+    "signalr": "^2.2.1",
     "typed-immutable-record": "0.0.6",
     "zone.js": "^0.6.26"
   },
@@ -71,6 +73,7 @@
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.40",
+    "@types/jquery": "^2.0.39",
     "@types/node": "^6.0.46",
     "@types/protractor": "1.5.20",
     "@types/selenium-webdriver": "2.44.29",
@@ -99,8 +102,8 @@
     "karma-mocha-reporter": "2.2.1",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
-    "karma-source-map-support": "1.2.0",
     "karma-sourcemap-loader": "0.3.7",
+    "karma-source-map-support": "1.2.0",
     "karma-webpack": "1.8.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.13",
@@ -109,10 +112,10 @@
     "reflect-metadata": "^0.1.8",
     "source-map-loader": "0.1.5",
     "style-loader": "^0.13.1",
-    "ts-loader": "^1.1.0",
-    "ts-node": "^1.7.0",
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
+    "ts-loader": "^1.1.0",
+    "ts-node": "^1.7.0",
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
