fix(build): update webpack build setup and prerender to 2.x
Closes #69 #67

Had to remove font-awesome from web pack and bring back the CDNs to
remove other web pack issues that were springing up with the latest
changes.

Partially #65 but still need to look into bundle size issues

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "e2e": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "lint": "npm run tslint \"Client/**/*.ts\"",
-    "postinstall": "webpack --config webpack.config.vendor.js",
+    "postinstall": "webpack --config webpack.config.vendor.js --progress",
     "posttest": "npm run coverage",
     "postversion": "git push && git push --tags",
     "pree2e": "npm run webdriver:update -- --standalone",
@@ -56,8 +56,8 @@
     "angular2-platform-node": "~2.1.0-rc.1",
     "angular2-universal": "~2.1.0-rc.1",
     "angular2-universal-polyfills": "~2.1.0-rc.1",
-    "aspnet-prerendering": "^1.0.7",
-    "aspnet-webpack": "^1.0.26",
+    "aspnet-prerendering": "^2.0.0",
+    "aspnet-webpack": "^1.0.27",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
@@ -67,7 +67,10 @@
     "preboot": "^4.5.2",
     "rxjs": "5.0.1",
     "signalr": "^2.2.1",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
     "typed-immutable-record": "0.0.6",
+    "webpack-merge": "^0.15.0",
     "zone.js": "0.7.2"
   },
   "devDependencies": {
@@ -81,15 +84,15 @@
     "@types/source-map": "0.1.28",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "1.12.35",
-    "angular2-template-loader": "0.6.0",
-    "awesome-typescript-loader": "2.2.4",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "3.0.0-beta.13 || ^3.0.0",
     "codelyzer": "1.0.0-beta.4",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.2.1",
     "es6-promise-loader": "1.0.2",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.5",
+    "extract-text-webpack-plugin": "^2.0.0-rc",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "isomorphic-fetch": "^2.2.1",
@@ -111,7 +114,6 @@
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.8",
     "source-map-loader": "0.1.5",
-    "style-loader": "^0.13.1",
     "tslint": "3.15.1",
     "tslint-loader": "2.1.5",
     "ts-loader": "^1.1.0",
@@ -119,10 +121,10 @@
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
-    "webpack": "2.2.0",
+    "webpack": "^2.2.0",
     "webpack-dashboard": "0.2.1",
     "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "2.2.0",
+    "webpack-dev-server": "^2.2.0",
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^0.15.0",
