--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ Obj/
 
 # Visual Studio 2015 cache/options directory
 .vs/
-/wwwroot/dist/
+/wwwroot/dist/**
+/Client/dist/**
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
