fix(webpack): add webpack build step to postinstall
Fix for
https://github.com/MarkPieszak/aspnetcore-angular2-universal/issues/32#issuecomment-276964936

Wasn't creating webpack on fresh install (so would error on running)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "e2e": "npm run protractor",
     "e2e:live": "npm run e2e -- --elementExplorer",
     "lint": "npm run tslint \"Client/**/*.ts\"",
-    "postinstall": "webpack --config webpack.config.vendor.js --progress",
+    "postinstall": "npm run webpack-vendor && npm run webpack",
     "posttest": "npm run coverage",
     "postversion": "git push && git push --tags",
     "pree2e": "npm run webdriver:update -- --standalone",
@@ -35,8 +35,9 @@
     "webdriver:start": "npm run webdriver-manager start",
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver-manager": "webdriver-manager",
-    "webpack": "webpack",
-    "webpack-dashboard": "webpack-dashboard"
+    "webpack": "webpack --progress",
+    "webpack-dashboard": "webpack-dashboard",
+    "webpack-vendor": "webpack --config webpack.config.vendor.js --progress"
   },
   "dependencies": {
     "@angular/common": "2.4.5",
