--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@types/source-map": "0.1.28",
     "@types/uglify-js": "2.6.28",
     "@types/webpack": "1.12.35",
-    "angular2-template-loader": "^0.6.0",
+    "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "3.0.0-beta.13 || ^3.0.0",
     "codelyzer": "1.0.0-beta.4",
     "css": "^2.2.1",
