fix(webpack): fix npm install hanging
closes #95

just a heads up: @dhughes3 @TalaveraTechnologySolutions (you were recent
forks since the last commit, get latest to fix the npm install hang
issue that this commit fixes!)

wepack-dashboard still needs to be looked at it, it appears to be some
underlying issue with it that hangs things up

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preversion": "npm test",
     "protractor": "protractor",
     "rimraf": "rimraf",
-    "start:dashboard": "npm run webpack-dashboard -- webpack-dev-server --inline --hot --progress --port 3001",
+    "start:dashboard": "npm run webpack-dashboard-pre && npm run webpack-dashboard -- webpack-dev-server--inline --hot --progress --port 3001",
     "test": "karma start",
     "tslint": "tslint",
     "typedoc": "typedoc",
@@ -36,6 +36,7 @@
     "webdriver:update": "npm run webdriver-manager update",
     "webdriver-manager": "webdriver-manager",
     "webpack": "webpack --progress",
+    "webpack-dashboard-pre": "npm run webpack -- --define dashboard",
     "webpack-dashboard": "webpack-dashboard",
     "webpack-vendor": "webpack --config webpack.config.vendor.js --progress"
   },
@@ -106,8 +107,8 @@
     "karma-mocha-reporter": "2.2.2",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-remap-coverage": "0.1.2",
-    "karma-sourcemap-loader": "0.3.7",
     "karma-source-map-support": "1.2.0",
+    "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "phantomjs-polyfill": "0.0.2",
     "phantomjs-prebuilt": "2.1.13",
@@ -115,10 +116,10 @@
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.8",
     "source-map-loader": "0.1.5",
-    "tslint": "3.15.1",
-    "tslint-loader": "2.1.5",
     "ts-loader": "^1.1.0",
     "ts-node": "^1.7.0",
+    "tslint": "3.15.1",
+    "tslint-loader": "2.1.5",
     "typedoc": "0.5.1",
     "typescript": "2.0.10",
     "url-loader": "^0.5.7",
@@ -129,7 +130,8 @@
     "webpack-externals-plugin": "^1.0.0",
     "webpack-hot-middleware": "^2.15.0",
     "webpack-merge": "^0.15.0",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "yargs": "^6.6.0"
   },
   "keywords": [
     "aspnetcore",
