fix(deployment): fix publish & dep issues
Azure deployment now functional, example app available here:
http://aspnetcore-angular2-universal.azurewebsites.net/

related #97 (might fix this as well)

closes #99

--- a/project.json
+++ b/project.json
@@ -2,11 +2,9 @@
   "buildOptions": {
     "compile": {
       "exclude": [
-        "node_modules",
-        "Client"
+        "node_modules"
       ]
     },
-    "debugType": "portable",
     "emitEntryPoint": true,
     "preserveCompilationContext": true
   },
