--- a/package.json
+++ b/package.json
@@ -55,27 +55,6 @@
     "@ngrx/effects": "2.0.0",
     "@ngrx/store": "2.2.1",
     "@ngrx/store-devtools": "^3.2.3",
-    "angular2-platform-node": "~2.1.0-rc.1",
-    "angular2-universal": "~2.1.0-rc.1",
-    "angular2-universal-polyfills": "~2.1.0-rc.1",
-    "aspnet-prerendering": "^2.0.0",
-    "aspnet-webpack": "^1.0.27",
-    "bootstrap": "^4.0.0-alpha.5",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "immutable": "3.8.1",
-    "jquery": "^3.1.1",
-    "ng2-bootstrap": "1.3.0",
-    "preboot": "^4.5.2",
-    "rxjs": "5.0.1",
-    "signalr": "^2.2.1",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5",
-    "typed-immutable-record": "0.0.6",
-    "webpack-merge": "^0.15.0",
-    "zone.js": "0.7.2"
-  },
-  "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.40",
@@ -88,7 +67,15 @@
     "@types/webpack": "1.12.35",
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "3.0.0-beta.13 || ^3.0.0",
-    "codelyzer": "1.0.0-beta.4",
+    "angular2-platform-node": "~2.1.0-rc.1",
+    "angular2-universal": "~2.1.0-rc.1",
+    "angular2-universal-polyfills": "~2.1.0-rc.1",
+    "aspnet-prerendering": "^2.0.0",
+    "aspnet-webpack": "^1.0.27",
+    "bootstrap": "^4.0.0-alpha.5",
+    "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "immutable": "3.8.1",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-promise": "3.2.1",
@@ -100,19 +87,15 @@
     "isomorphic-fetch": "^2.2.1",
     "js.clone": "0.0.3",
     "json-loader": "^0.5.4",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "2.2.2",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-remap-coverage": "0.1.2",
-    "karma-source-map-support": "1.2.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
-    "phantomjs-polyfill": "0.0.2",
-    "phantomjs-prebuilt": "2.1.13",
-    "protractor": "4.0.10",
+    "jquery": "^3.1.1",
+    "ng2-bootstrap": "1.3.0",
+    "preboot": "^4.5.2",
+    "rxjs": "5.0.1",
+    "signalr": "^2.2.1",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
+    "typed-immutable-record": "0.0.6",
+    "zone.js": "0.7.2",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.8",
     "source-map-loader": "0.1.5",
@@ -132,6 +115,22 @@
     "webpack-merge": "^0.15.0",
     "webpack-node-externals": "^1.5.4",
     "yargs": "^6.6.0"
+  },
+  "devDependencies": {
+    "codelyzer": "1.0.0-beta.4",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha-reporter": "2.2.2",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-remap-coverage": "0.1.2",
+    "karma-source-map-support": "1.2.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "2.1.13",
+    "protractor": "4.0.10"
   },
   "keywords": [
     "aspnetcore",
