--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aspnetcore-angular2-universal-starter",
-  "version": "1.0.0-beta.6",
+  "version": "1.0.0-rc.0",
   "author": {
     "name": "Mark Pieszak",
     "email": "mpieszak84@gmail.com",
