fix(package): name issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Angular 2+ Universal & ASP.NET Core - Advanced Starter",
+    "name": "angular2-universal-aspnetcore-advanced-starter",
     "version": "1.0.0-rc.1",
     "author": {
         "name": "Mark Pieszak",
